
* Improve ``as_string()`` representation for ``TypeVar``, ``ParamSpec`` and ``TypeVarTuple`` nodes, as well as
  type parameter in ``ClassDef``, ``FuncDef`` and ``TypeAlias`` nodes (PEP 695).

* Astroid now correctly supports the ``exceptions`` attribute of ``ExceptionGroup``.

  Closes pylint-dev/pylint#8985
  Closes pylint-dev/pylint#10558


What's New in astroid 3.3.11?
=============================
Release date: 2025-07-13

* Fix a crash when parsing an empty arbitrary expression with ``extract_node`` (``extract_node("__()")``).

  Closes #2734

* Fix a crash when parsing a slice called in a decorator on a function that is also decorated with
  a known ``six`` decorator.

  Closes #2721

What's New in astroid 3.3.10?
=============================
Release date: 2025-05-10

* Avoid importing submodules sharing names with standard library modules.

  Closes #2684

* Fix bug where ``pylint code.custom_extension`` would analyze ``code.py`` or ``code.pyi`` instead if they existed.

	Closes pylint-dev/pylint#3631


What's New in astroid 3.3.9?
============================
Release date: 2025-03-09

* Fix crash when `sys.modules` contains lazy loader objects during checking.

  Closes #2686
  Closes pylint-dev/pylint#8589

* Upload release assets to PyPI via Trusted Publishing.

  Refs pylint-dev/pylint#10256


What's New in astroid 3.3.8?
============================
Release date: 2024-12-23

* Fix inability to import `collections.abc` in python 3.13.1. The reported fixes in astroid 3.3.6
  and 3.3.7 did not actually fix this issue.

  Closes pylint-dev/pylint#10112


What's New in astroid 3.3.7?
============================
Release date: 2024-12-20

This release was yanked.

* Fix inability to import `collections.abc` in python 3.13.1. The reported fix in astroid 3.3.6
  did not actually fix this issue.

  Closes pylint-dev/pylint#10112


What's New in astroid 3.3.6?
============================
Release date: 2024-12-08
